src/syntax/parser/snapshots/hebi__syntax__parser__tests__duplicate_fields.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
duplicate field a
| [4;31ma[0m = 1


