src/syntax/parser/snapshots/hebi__syntax__parser__tests__func_stmt-2.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
non-default argument follows default argument
| fn f(a, b=c, [4;31md[0m,): pass


