src/syntax/parser/snapshots/hebi__syntax__parser__tests__func_stmt-3.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
expected `identifier`
| fn f([4;31m*[0m,): pass


