src/syntax/parser/snapshots/hebi__syntax__parser__tests__func_stmt-4.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
keyword rest argument must be named
| fn f([4;31m**[0m


